--- a/doc/@lotsof/sugarcss/css/rule/s-radius.mdx
+++ b/doc/@lotsof/sugarcss/css/rule/s-radius.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'radius'
+title: 's-radius'
 namespace: '@lotsof.sugarcss.css.rule'
 description: function trim() { [native code] }
 type: 'AtRule'
@@ -9,7 +9,7 @@ platform: '[{"name":"css","description":""}]'
 author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
 ---
 <div class="docmap-mdx">
-# radius
+# s-radius
 <div class="_namespace">@lotsof.sugarcss.css.rule</div>
 <div class="_metas">
 <div class="_type"><span class="_type-label">Type:</span><span class="_type-value">AtRule</span></div>
