--- a/doc/@lotsof/sugarcss/-css/function/-s-color.mdx
+++ b/doc/@lotsof/sugarcss/-css/function/-s-color.mdx
@@ -1,20 +1,20 @@
 ---
-title: 's-color'
-namespace: '@lotsof.sugarcss.css.function'
+title: ' s-color'
+namespace: '@lotsof.sugarcss.-css.function'
 description: function trim() { [native code] }
-type: 'Function'
-status: 'stable'
-since: '0.0.1'
+type: ' Function'
+status: ' stable'
+since: ' 0.0.1'
 platform: '[{"name":"css","description":""}]'
-author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
+author: '{"name":" Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
 ---
 <div class="docmap-mdx">
-# s-color
-<div class="_namespace">@lotsof.sugarcss.css.function</div>
+#  s-color
+<div class="_namespace">@lotsof.sugarcss.-css.function</div>
 <div class="_metas">
-<div class="_type"><span class="_type-label">Type:</span><span class="_type-value">Function</span></div>
-<div class="_status"><span class="_status-label">Status:</span><span class="_status-value -stable">stable</span></div>
-<div class="_since"><span class="_since-label">Since:</span><span class="_since-value">0.0.1</span></div>
+<div class="_type"><span class="_type-label">Type:</span><span class="_type-value"> Function</span></div>
+<div class="_status"><span class="_status-label">Status:</span><span class="_status-value - stable"> stable</span></div>
+<div class="_since"><span class="_since-label">Since:</span><span class="_since-value"> 0.0.1</span></div>
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
 <div class="_description">
@@ -22,12 +22,12 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 Allow to apply modifiers or shades to the color like darken, lighten, saturate, desaturate, spin, etc...
 Here&#39;s the list of available modifiers:</p>
 <ul>
-<li><code>lighten</code>: 0-100</li>
-<li><code>darken</code>: 0-100</li>
-<li><code>saturate</code>: 0-100</li>
-<li><code>desaturate</code>: 0-100</li>
-<li><code>spin</code>: 0-360</li>
-<li><code>alpha</code>: 0-1</li>
+<li>lighten: 0-100</li>
+<li>darken: 0-100</li>
+<li>saturate: 0-100</li>
+<li>desaturate: 0-100</li>
+<li>spin: 0-360</li>
+<li>alpha: 0-1</li>
 </ul>
 <p>The shades are registered like so: --s-shade-placeholder: --darken 10;</p>
 
@@ -56,22 +56,20 @@ Here&#39;s the list of available modifiers:</p>
 <div class="_examples">
 ## Examples
 ```css
-:root {
-   --s-shade-test: --lighten 10;
-}
+--s-shade-test: --lighten 10;
 
-.my-element {
-  color: s-color(accent);
-  color: s-color(accent, test);
-  color: s-color(accent, --darken 20 --spin 30);
-}
+ .my-element {
+   color: s-color(accent);
+   color: s-color(accent, test);
+   color: s-color(accent, --darken 20 --spin 30);
+ }
 ```
 </div>
 <div class="_author">
 ## Author
 <ul class="_list">
 <li class="_item">
-<span class="_name">Olivier Bossel</span>
+<span class="_name"> Olivier Bossel</span>
 <span class="_email">olivier.bossel@gmail.com</span>
 <a href="https://hello@lotsof.dev" target="_blank" class="_url">https://hello@lotsof.dev</a>
 </li>
