--- a/doc/@lotsof/sugarcss/-css/rule/-transition.mdx
+++ b/doc/@lotsof/sugarcss/-css/rule/-transition.mdx
@@ -1,20 +1,20 @@
 ---
-title: 'transition'
-namespace: '@lotsof.sugarcss.css.rule'
+title: ' transition'
+namespace: '@lotsof.sugarcss.-css.rule'
 description: function trim() { [native code] }
-type: 'AtRule'
-status: 'stable'
-since: '0.0.1'
+type: ' AtRule'
+status: ' stable'
+since: ' 0.0.1'
 platform: '[{"name":"css","description":""}]'
-author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
+author: '{"name":" Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
 ---
 <div class="docmap-mdx">
-# transition
-<div class="_namespace">@lotsof.sugarcss.css.rule</div>
+#  transition
+<div class="_namespace">@lotsof.sugarcss.-css.rule</div>
 <div class="_metas">
-<div class="_type"><span class="_type-label">Type:</span><span class="_type-value">AtRule</span></div>
-<div class="_status"><span class="_status-label">Status:</span><span class="_status-value -stable">stable</span></div>
-<div class="_since"><span class="_since-label">Since:</span><span class="_since-value">0.0.1</span></div>
+<div class="_type"><span class="_type-label">Type:</span><span class="_type-value"> AtRule</span></div>
+<div class="_status"><span class="_status-label">Status:</span><span class="_status-value - stable"> stable</span></div>
+<div class="_since"><span class="_since-label">Since:</span><span class="_since-value"> 0.0.1</span></div>
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
 <div class="_description">
@@ -46,7 +46,7 @@ To be able to use this, you need to register at least 1 transition like so:</p>
 ## Author
 <ul class="_list">
 <li class="_item">
-<span class="_name">Olivier Bossel</span>
+<span class="_name"> Olivier Bossel</span>
 <span class="_email">olivier.bossel@gmail.com</span>
 <a href="https://hello@lotsof.dev" target="_blank" class="_url">https://hello@lotsof.dev</a>
 </li>
