--- a/doc/@lotsof/sugarcss/css/function/s-font-family.mdx
+++ b/doc/@lotsof/sugarcss/css/function/s-font-family.mdx
@@ -1,33 +1,31 @@
 ---
-title: 'radius'
-namespace: '@lotsof.sugarcss.css.rule'
+title: 's-font-family'
+namespace: '@lotsof.sugarcss.css.function'
 description: function trim() { [native code] }
-type: 'AtRule'
+type: 'Function'
 status: 'stable'
 since: '0.0.1'
 platform: '[{"name":"css","description":""}]'
 author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
 ---
 <div class="docmap-mdx">
-# radius
-<div class="_namespace">@lotsof.sugarcss.css.rule</div>
+# s-font-family
+<div class="_namespace">@lotsof.sugarcss.css.function</div>
 <div class="_metas">
-<div class="_type"><span class="_type-label">Type:</span><span class="_type-value">AtRule</span></div>
+<div class="_type"><span class="_type-label">Type:</span><span class="_type-value">Function</span></div>
 <div class="_status"><span class="_status-label">Status:</span><span class="_status-value -stable">stable</span></div>
 <div class="_since"><span class="_since-label">Since:</span><span class="_since-value">0.0.1</span></div>
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
 <div class="_description">
-<p>This declaration allows you to apply a registered raius easily.
-To be able to use this, you need to register at least 1 radius like in the example below:</p>
-
+Apply a font family from the fonts registered ones.
 </div>
 <div class="_params">
 ## Params
 <ol class="_list">
 <li class="_item">
-<span class="_name">name<span class="_required">*</span></span><span class="_default"></span> <span class="_type">String</span>
-<p class="_description">The transition name you want to apply</p>
+<span class="_name">font<span class="_required">*</span></span><span class="_default"></span> <span class="_type">String</span>
+<p class="_description">The font name you want to apply from registered ones</p>
 </li>
 </ol>
 </div>
@@ -43,35 +41,13 @@ To be able to use this, you need to register at least 1 radius like in the examp
 ## Examples
 ```css
 :root {
-   --s-radius-default: 10px;
-   --s-radius-special: 20px 10px 12px 34px;
+  --s-font-family-code: "Fira Code", monospace;
 }
 
 .my-element {
-     @s-radius();
-}
-
-.my-other-element {
-    @s-radius(special);
+  font-family: s-font-family(code);
 }
 ```
-</div>
-<div class="_todo">
-## Todo
-<ul class="_list">
-<li class="_item">
-<span class="_description">Something</span>
-<span class="_priority -normal">normal</span>
-</li>
-<li class="_item">
-<span class="_description">Something else</span>
-<span class="_priority -high">high</span>
-</li>
-<li class="_item">
-<span class="_description">wefewfwe else</span>
-<span class="_priority -low">low</span>
-</li>
-</ul>
 </div>
 <div class="_author">
 ## Author
