--- a/doc/@lotsof/sugarcss/css/rule/s-media.mdx
+++ b/doc/@lotsof/sugarcss/css/rule/s-media.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'radius'
+title: 's-media'
 namespace: '@lotsof.sugarcss.css.rule'
 description: function trim() { [native code] }
 type: 'AtRule'
@@ -9,7 +9,7 @@ platform: '[{"name":"css","description":""}]'
 author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"https://hello@lotsof.dev"}'
 ---
 <div class="docmap-mdx">
-# radius
+# s-media
 <div class="_namespace">@lotsof.sugarcss.css.rule</div>
 <div class="_metas">
 <div class="_type"><span class="_type-label">Type:</span><span class="_type-value">AtRule</span></div>
@@ -18,16 +18,28 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
 <div class="_description">
-<p>This declaration allows you to apply a registered raius easily.
-To be able to use this, you need to register at least 1 radius like in the example below:</p>
+<p>This function allows you to define media queries easily with these features:</p>
+<ul>
+<li>Define your own media queries like so: --s-media-desktop: 1024px 9999px;</li>
+<li>Use defined media queries easily</li>
+<li>Support for <code>dark</code> and <code>light</code> media queries</li>
+</ul>
+<p>Support for operators like:</p>
+<ul>
+<li><code>lt-...</code>: lower than</li>
+<li><code>lte-...</code>: lower than or equal</li>
+<li><code>gt-...</code>: greater than</li>
+<li><code>gte-...</code>: greater than or equal</li>
+<li><code>e-...</code>: equal</li>
+</ul>
 
 </div>
 <div class="_params">
 ## Params
 <ol class="_list">
 <li class="_item">
-<span class="_name">name<span class="_required">*</span></span><span class="_default"></span> <span class="_type">String</span>
-<p class="_description">The transition name you want to apply</p>
+<span class="_name">query<span class="_required">*</span></span><span class="_default"></span> <span class="_type">String</span>
+<p class="_description">The query to parse</p>
 </li>
 </ol>
 </div>
@@ -43,35 +55,19 @@ To be able to use this, you need to register at least 1 radius like in the examp
 ## Examples
 ```css
 :root {
-   --s-radius-default: 10px;
-   --s-radius-special: 20px 10px 12px 34px;
+   --s-media-phone: 0 767px;
+   --s-media-tablet: 768px 1023px;
+   --s-media-desktop: 1024px 9999px;
 }
 
 .my-element {
-     @s-radius();
-}
-
-.my-other-element {
-    @s-radius(special);
+   @media phone { ... }
+   @media lt-desktop { ... }
+   @media e-tablet { ... }
+   @media dark { ... }
+   @media gt-phone { ... }
 }
 ```
-</div>
-<div class="_todo">
-## Todo
-<ul class="_list">
-<li class="_item">
-<span class="_description">Something</span>
-<span class="_priority -normal">normal</span>
-</li>
-<li class="_item">
-<span class="_description">Something else</span>
-<span class="_priority -high">high</span>
-</li>
-<li class="_item">
-<span class="_description">wefewfwe else</span>
-<span class="_priority -low">low</span>
-</li>
-</ul>
 </div>
 <div class="_author">
 ## Author
