--- a/doc/@lotsof/sugarcss/css/function/s-font.mdx
+++ b/doc/@lotsof/sugarcss/css/function/s-font.mdx
@@ -10,13 +10,13 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 ---
 <div class="docmap-mdx">
 # s-font
-<div class="_namespace">@lotsof.sugarcss.css.function</div>
 <div class="_metas">
 <div class="_type"><span class="_type-label">Type:</span><span class="_type-value">Function</span></div>
 <div class="_status"><span class="_status-label">Status:</span><span class="_status-value -stable">stable</span></div>
 <div class="_since"><span class="_since-label">Since:</span><span class="_since-value">0.0.1</span></div>
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
+<div class="_namespace">@lotsof.sugarcss.css.function</div>
 <div class="_description">
 <p>Apply a font from the fonts registered ones.
 The supported fonts properties are:</p>
@@ -49,7 +49,7 @@ The supported fonts properties are:</p>
 </ol>
 </div>
 <div class="_examples">
-## Examples
+## Example
 ```css
 :root {
   --s-font-...: "Roboto,sans-serif" %size %lineHeight %weight %style %variant %stretch;
