--- a/doc/@lotsof/sugarcss/css/rule/s-media.mdx
+++ b/doc/@lotsof/sugarcss/css/rule/s-media.mdx
@@ -10,13 +10,13 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 ---
 <div class="docmap-mdx">
 # s-media
-<div class="_namespace">@lotsof.sugarcss.css.rule</div>
 <div class="_metas">
 <div class="_type"><span class="_type-label">Type:</span><span class="_type-value">AtRule</span></div>
 <div class="_status"><span class="_status-label">Status:</span><span class="_status-value -stable">stable</span></div>
 <div class="_since"><span class="_since-label">Since:</span><span class="_since-value">0.0.1</span></div>
 <div class="_platform"><span class="_platform-label">Platform:</span><span class="_platform-value">css</span></div>
 </div>
+<div class="_namespace">@lotsof.sugarcss.css.rule</div>
 <div class="_description">
 <p>This function allows you to define media queries easily with these features:</p>
 <ul>
@@ -31,6 +31,8 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 <li><code>gt-...</code>: greater than</li>
 <li><code>gte-...</code>: greater than or equal</li>
 <li><code>e-...</code>: equal</li>
+<li><code>dark</code>: dark mode</li>
+<li><code>light</code>: light mode</li>
 </ul>
 
 </div>
@@ -52,7 +54,7 @@ author: '{"name":"Olivier Bossel","email":"olivier.bossel@gmail.com","url":"http
 </ol>
 </div>
 <div class="_examples">
-## Examples
+## Example
 ```css
 :root {
    --s-media-phone: 0 767px;
